@@ -8,7 +8,7 @@ test "$prefix" = NONE && prefix=/usr/local
 test "$exec_prefix" = NONE && exec_prefix=$prefix
 
 PACKAGE=mbuffer
-VERSION=20010704
+VERSION=20010716
 
 AC_DEFINE_UNQUOTED(VERSION,"${VERSION}")
 AC_SUBST(VERSION)
@@ -24,6 +24,7 @@ AC_PATH_PROG(STRIP,strip)
 
 AC_CHECK_LIB(pthread,pthread_attr_init,,AC_MSG_ERROR(you need the pthread library!))
 AC_SEARCH_LIBS(sem_init,rt posix,,AC_MSG_ERROR(could not find semaphore functions!))
+AC_PATH_PROG(MT,mt,AC_MSG_WARN(could not find the program mt - you might need this if you want autoloader support))
 
 if test -n "$GCC"; then
         CFLAGS="$CFLAGS -Wall"
@@ -69,15 +70,15 @@ AC_ARG_ENABLE(multi-volume,
 	,AC_DEFINE_UNQUOTED(MULTIVOLUME))
 AC_SUBST(MULTIVOLUME)
 
-AC_ARG_ENABLE(experimental,
-        --enable-experimental     enable experimental code,
-        AC_DEFINE_UNQUOTED(EXPERIMENTAL)
+AC_ARG_ENABLE(networking,
+        --enable-networking     enable networking code (BETA)XS,
+        AC_DEFINE_UNQUOTED(NETWORKING)
 	AC_SEARCH_LIBS(socket,socket,,
 		AC_MSG_ERROR(could not find the library containing network functions!))
 	AC_SEARCH_LIBS(gethostbyname,nsl,,
 		AC_MSG_ERROR(could not find the library containing name convertion functions!))
 	,)
-AC_SUBST(EXPERIMENTAL)
+AC_SUBST(NETWORKING)
 
 
 AC_OUTPUT(Makefile mbuffer.1)
